force-app/main/default/objects/Application__c/fields/Supervisor_s_Honours__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Honours__c</fullName>
    <label>Supervisor&apos;s Honours</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>