force-app/main/default/objects/Application__c/fields/Supervisor_s_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Postcode__c</fullName>
    <label>Supervisor&apos;s Postcode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>