force-app/main/default/objects/Application__c/fields/Supervisor_s_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Telephone_Number__c</fullName>
    <label>Supervisor&apos;s Telephone Number</label>
    <type>Phone</type>
</CustomField>