force-app/main/default/objects/Application__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <formula>CreatedBy.User_Contact_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile/Landline</label>
    <type>Text</type>
</CustomField>