force-app/main/default/objects/Application__c/fields/The_process_criteria_and_or_governance__c.field-meta.xml
<CustomField>
    <fullName>The_process_criteria_and_or_governance__c</fullName>
    <inlineHelpText>The process, criteria and or governance that will be put in place regarding data/sample sharing</inlineHelpText>
    <label>The process, criteria and or governance</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>