force-app/main/default/objects/Application__c/fields/Time_frame_to_conceptualise_design__c.field-meta.xml
<CustomField>
    <fullName>Time_frame_to_conceptualise_design__c</fullName>
    <inlineHelpText>Time frame to conceptualise, design and implement the proposal</inlineHelpText>
    <label>Time frame to conceptualise, design</label>
    <type>TextArea</type>
</CustomField>