force-app/main/default/objects/Application__c/fields/Title_of_the_Public_Engagement_event_pro__c.field-meta.xml
<CustomField>
    <fullName>Title_of_the_Public_Engagement_event_pro__c</fullName>
    <label>Title of the Public Engagement event/pro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>