force-app/main/default/objects/Application__c/fields/Total_No_of_publications__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_publications__c</fullName>
    <label>Total No of publications</label>
    <length>80</length>
    <type>Text</type>
</CustomField>