force-app/main/default/objects/Application__c/fields/Total_number_of_publications__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_publications__c</fullName>
    <formula>Number_of_first_author_publications__c +  Number_of_corresponding_author_publi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total number of publications</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>