force-app/main/default/objects/Application__c/fields/Total_number_of_years_of_Research_manage__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_years_of_Research_manage__c</fullName>
    <inlineHelpText>Total number of years of experience in research management roles</inlineHelpText>
    <label>Total number of years of Research manage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>