force-app/main/default/objects/Application__c/fields/Total_perceived_budget__c.field-meta.xml
<CustomField>
    <fullName>Total_perceived_budget__c</fullName>
    <label>Total perceived budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>