force-app/main/default/objects/Application__c/fields/Upload_letter_of_support_from_an_Editor__c.field-meta.xml
<CustomField>
    <fullName>Upload_letter_of_support_from_an_Editor__c</fullName>
    <description>Upload letter of support from an Editor of a media outlet where your work will be published. Freelancers will also need to upload this letter</description>
    <inlineHelpText>Upload letter of support from an Editor of a media outlet where your work will be published. Freelancers will also need to upload this letter.
If you are unable to upload the letter here, email it to ISMFellows@gmail.com</inlineHelpText>
    <label>Upload letter of support from an Editor</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>