force-app/main/default/objects/Application__c/fields/What_is_the_competition_in_the_area__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_competition_in_the_area__c</fullName>
    <label>What is the competition in the area?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>