force-app/main/default/objects/Application__c/fields/What_is_your_primary_Profession__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_primary_Profession__c</fullName>
    <label>What is your primary Profession?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>