force-app/main/default/objects/Application__c/fields/What_is_your_primary_reason_for_attendin__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_primary_reason_for_attendin__c</fullName>
    <inlineHelpText>What is your primary reason for attending INORMS 2020</inlineHelpText>
    <label>What is your primary reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>