force-app/main/default/objects/Application__c/fields/Where_did_you_learn_of_this_scheme__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_learn_of_this_scheme__c</fullName>
    <inlineHelpText>Where did you learn of this scheme? (Please check all that apply)</inlineHelpText>
    <label>Where did you learn of this scheme</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colleague</fullName>
            </value>
            <value>
                <fullName>Conference/Exhibition/Workshop</fullName>
            </value>
            <value>
                <fullName>Personal contact</fullName>
            </value>
            <value>
                <fullName>Newspaper/Magazine</fullName>
            </value>
            <value>
                <fullName>Science Careers/Nature Jobs</fullName>
            </value>
            <value>
                <fullName>IndiaBioscience.org</fullName>
            </value>
            <value>
                <fullName>India Alliance website</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Lancet</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>The National Medical Journal of India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>