force-app/main/default/objects/Application__c/fields/Why_do_you_want_to_attend_this_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Why_do_you_want_to_attend_this_Workshop__c</fullName>
    <description>Why do you want to attend this Workshop? In what way would it be helpful to you? (in less than 1500 characters)</description>
    <inlineHelpText>Why do you want to attend this Workshop? In what way would it be helpful to you? (in less than 1500 characters)</inlineHelpText>
    <label>Why do you want to attend this Workshop?</label>
    <length>1499</length>
    <type>LongTextArea</type>
</CustomField>