force-app/main/default/objects/Application__c/fields/Will_the_resource_be_accessible_to_othe__c.field-meta.xml
<CustomField>
    <fullName>Will_the_resource_be_accessible_to_othe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will the resource be accessible to other</label>
    <type>Checkbox</type>
</CustomField>