force-app/main/default/objects/Application__c/fields/Will_the_resource_be_accessible_to_other__c.field-meta.xml
<CustomField>
    <fullName>Will_the_resource_be_accessible_to_other__c</fullName>
    <label>Will the resource be accessible to other</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>