force-app/main/default/objects/Application__c/recordTypes/Programme_Award_Application_Form_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Programme_Award_Application_Form_Read_Only</fullName>
    <active>true</active>
    <label>Programme Award Application Form - Read Only</label>
</RecordType>